@@ -1,6 +1,8 @@
 package com.flatiron.spring.SpringBookProject.service;
 
 import com.flatiron.spring.SpringBookProject.dto.BookDTO;
+import com.flatiron.spring.SpringBookProject.dto.GetBookDTO;
+import com.flatiron.spring.SpringBookProject.dto.GetGenreDTO;
 import com.flatiron.spring.SpringBookProject.exception.NotFoundException;
 import com.flatiron.spring.SpringBookProject.model.Book;
 import com.flatiron.spring.SpringBookProject.model.Genre;
@@ -8,7 +10,9 @@ import com.flatiron.spring.SpringBookProject.repository.BookRepository;
 import com.flatiron.spring.SpringBookProject.repository.GenreRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,19 +26,17 @@ public class GenreService {
     @Autowired
     ModelMapper modelMapper;
 
-public List<BookDTO> getAllBooksInGenreById(int id)
-    {
-        Genre genre = genreRepository.findById(id).orElseThrow(()->new NotFoundException("Genre id "+ id + "NOT FOUND"));
-        return bookRepository
-                .findAll()
+public List<GetBookDTO> getAllBooksInGenreById(int id) {
+    Genre g = genreRepository.findById(id).orElseThrow(()->new ResponseStatusException(HttpStatus.NOT_FOUND));
+        return bookRepository.findAll()
+                .stream()
+                .filter(
+                        (book)->book.getGenres().contains(g))
+                .toList()
                 .stream()
                 .map(
-                        book -> modelMapper
-                                .map(book,BookDTO.class))
-                .filter(
-                        book ->
-                                book.getGenre().equals(genre))
-                .collect(Collectors.toList());
+                        book -> modelMapper.map(book,GetBookDTO.class))
+                .toList();
     }
 
 }
